# ops-cli

./: .gitignore  Dockerfile  LICENSE  README.md  cli.py  pyproject.toml
apis/: client_api.py  confluence_api.py  dependency_api.py  docker_api.py  docker_compose_api.py  github_api.py  google_docs_api.py  google_sheets_api.py  jira_api.py  kubernetes_api.py  opensearch_api.py  plugin_base.py  postgresql_api.py  ssh_api.py
apis/core/: authentication.py  client.py  interfaces.py  plugin.py  plugin_base.py
commands/: cli.py  client.py  confluence.py  deps.py  github.py  jira.py  logging.py  system.py
configs/: dependencies.yaml  docker-compose.yml
core/: plugin.py
extensions/: cloud_resources.py
models/: environment.py
plugins/: example_plugin.py  resource_manager_plugin.py
services/: base_service.py  jira_service.py  kubernetes_service.py  postgresql_service.py  ssh_service.py
